--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,55 +1,12 @@
 {
-  "cSpell.words": [
-    "Abzan",
-    "Animar",
-    "Archmage's",
-    "Arixmethes",
-    "Atla",
-    "Counterflux",
-    "Deathsprout",
-    "Dragonclaw",
-    "Duneblast",
-    "Farseek",
-    "Fiora",
-    "Garruk's",
-    "Gitrog",
-    "Glarb",
-    "Gravetide",
-    "Guildpact",
-    "Hailfire",
-    "Iridian",
-    "Jaya's",
-    "Jodah",
-    "Kagachi",
-    "Leyline",
-    "Lullmage's",
-    "Mizzet",
-    "Mossfire",
-    "Muldrotha",
-    "Omnath",
-    "Palani",
-    "Parun",
-    "Paruns",
-    "PDMU",
-    "Phyrexian",
-    "PLST",
-    "PMOM",
-    "POTJ",
-    "PSTX",
-    "Rienne",
-    "Sandsteppe",
-    "Sauron",
-    "Seedborn",
-    "Shusher",
-    "Skycloud",
-    "Storvald",
-    "Sungrass",
-    "Sunscorched",
-    "Surrak",
-    "TLTR",
-    "Valgavoth",
-    "Voidslime",
-    "Xantcha",
-    "Zaxara"
+  "cSpell.ignorePaths": [
+    "package-lock.json",
+    "node_modules",
+    "vscode-extension",
+    ".git/{info,lfs,logs,refs,objects}/**",
+    ".git/{index,*refs,*HEAD}",
+    ".vscode",
+    ".vscode-insiders",
+    "print.txt"
   ]
 }
